--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,8 @@ env:
 after_success:
   - coverage combine
   - coverage report
+  - python app.py &
+  - python run.py
+  - cat bench.log
   - codecov
   - bash <(curl -s https://codecov.io/bash)
